# normordis-kernel

./: .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  SECURITY.md  TODO.md  clippy.toml  deny.toml
crates/domain/domain-mef/: Cargo.toml  MAN.md  README.md
crates/domain/domain-mef/src/: error.rs  lib.rs  ports.rs  types.rs
crates/domain/domain-registry/: Cargo.toml  MAN.md  README.md
crates/domain/domain-registry/src/: error.rs  lib.rs  ports.rs  service.rs  types.rs
crates/domain/domain-telemetry/: Cargo.toml
crates/domain/domain-telemetry/src/: error.rs  lib.rs  ports.rs  service.rs  types.rs
crates/kernel/core/core-audit/: Cargo.toml  MAN.md  README.md
crates/kernel/core/core-audit/src/: actor.rs  builtin_controls.rs  chain.rs  config.rs  control_category.rs  control_definition.rs  control_execution.rs  control_registry.rs  control_service.rs  error.rs  event.rs  integrity.rs  lib.rs  outcome.rs  policy.rs  query.rs  service.rs  signature.rs  store.rs  target.rs
crates/kernel/core/core-config/: Cargo.toml  MAN.md  README.md
crates/kernel/core/core-config/src/: app.rs  audit.rs  crypto.rs  error.rs  lib.rs  local.rs  logging.rs  profile.rs  runtime.rs  storage.rs  validate.rs
crates/kernel/core/core-config/tests/: local_config_tests.rs  profile_tests.rs
crates/kernel/core/core-documental/: Cargo.toml  MAN.md  README.md
crates/kernel/core/core-documental/src/: archive.rs  attachment.rs  authority.rs  custody.rs  error.rs  events.rs  lib.rs  package.rs  ports.rs  service.rs  template.rs  tests.rs
crates/kernel/core/core-exports/: Cargo.toml  MAN.md  README.md
crates/kernel/core/core-exports/src/: csv.rs  error.rs  lib.rs  materialization.rs  port.rs  snapshot.rs
crates/kernel/core/core-ingest/: Cargo.toml  MAN.md  README.md
crates/kernel/core/core-ingest/src/: adapters.rs  error.rs  lib.rs  service.rs  types.rs
crates/kernel/core/core-ingest/tests/: ingest_tests.rs
crates/kernel/core/core-metrics/: ADR-CORE-MET-001.md  Cargo.toml  MAN.md  README.md
crates/kernel/core/core-metrics/src/: changelog.rs  cycle.rs  definition.rs  emitter.rs  error.rs  event.rs  formula.rs  governance.rs  instance.rs  lib.rs  org_hierarchy.rs  pagination.rs  repository.rs  result.rs  service.rs  siadap.rs  target.rs  version.rs
crates/kernel/core/core-org/: Cargo.toml  MAN.md  README.md
crates/kernel/core/core-org/src/: audit.rs  competency.rs  controls.rs  delegation.rs  domain_events.rs  drainer.rs  error.rs  instrument.rs  lib.rs  pagination.rs  ports.rs  position.rs  service.rs  tests.rs  unit.rs
crates/kernel/core/core-rh/: Cargo.toml  MAN.md  README.md
crates/kernel/core/core-rh/src/: assignment.rs  audit.rs  controls.rs  error.rs  identity.rs  lib.rs  org.rs  ports.rs  role.rs  service.rs  session.rs  tests.rs  user.rs  validate.rs
crates/kernel/core/core-rh/tests/: rh_tests.rs
crates/kernel/core/core-security/: Cargo.toml  MAN.md  README.md
crates/kernel/core/core-security/src/: audit_log.rs  auth_level.rs  authz.rs  classification.rs  context.rs  delegation.rs  error.rs  event.rs  lib.rs  memory.rs  page.rs  policy.rs  ports.rs  principal.rs  repository.rs  role.rs  service.rs  sod.rs  write_invariant.rs
crates/kernel/core/core-validation/: Cargo.toml  MAN.md  README.md
crates/kernel/core/core-validation/src/: context.rs  email_verification.rs  error.rs  hash.rs  issue.rs  lib.rs  manifest.rs  normalized.rs  report.rs  result.rs  rules.rs  status.rs
crates/kernel/core/core-validation/tests/: validation_tests.rs
crates/kernel/infra/adapter-audit-sqlite/: Cargo.toml  README.md
crates/kernel/infra/adapter-audit-sqlite/src/: lib.rs
crates/kernel/infra/adapter-registry-sqlite/: Cargo.toml  README.md
crates/kernel/infra/adapter-registry-sqlite/src/: lib.rs
crates/kernel/infra/adapter-scanner/: Cargo.toml  MAN.md  README.md
crates/kernel/infra/adapter-scanner/src/: client.rs  discovery.rs  error.rs  lib.rs  types.rs  xml.rs
crates/kernel/infra/adapter-sqlite/: Cargo.toml  MAN.md  README.md
crates/kernel/infra/adapter-sqlite/src/: compat.rs  config.rs  connection.rs  error.rs  key.rs  lib.rs  manager.rs  reader.rs  relational.rs  storage_mode.rs  storage_raw.rs  traits.rs  writer.rs
crates/kernel/infra/adapter-sqlite/tests/: encrypted_write_stress_tests.rs  mixed_mode_tests.rs  storage_sqlite_stress_tests.rs
crates/kernel/infra/adapter-telemetry-sqlite/: Cargo.toml
crates/kernel/infra/adapter-telemetry-sqlite/src/: lib.rs
crates/kernel/infra/address-sqlite/: Cargo.toml  MAN.md  README.md
crates/kernel/infra/address-sqlite/src/: lib.rs
crates/kernel/infra/address-sqlite/tests/: address_sqlite_tests.rs
crates/kernel/infra/app-bootstrap/: CHANGELOG.md  Cargo.toml  MAN.md  README.md
crates/kernel/infra/app-bootstrap/src/: lib.rs
crates/kernel/infra/app-bootstrap/tests/: bootstrap_tests.rs
crates/kernel/infra/documental-sqlite/: Cargo.toml  MAN.md  README.md
crates/kernel/infra/documental-sqlite/src/: lib.rs
crates/kernel/infra/email/: Cargo.toml  MAN.md  README.md
crates/kernel/infra/email/src/: lib.rs
crates/kernel/infra/exports-sqlite/: Cargo.toml  MAN.md  README.md
crates/kernel/infra/exports-sqlite/src/: lib.rs
crates/kernel/infra/files/: Cargo.toml  MAN.md  README.md
crates/kernel/infra/files/src/: lib.rs
crates/kernel/infra/mef-sqlite/: Cargo.toml  MAN.md  README.md
crates/normordis-kernel/: Cargo.toml
crates/normordis-kernel/src/: lib.rs
crates/runtime/interoperability/: Cargo.toml  MAN.md  README.md
crates/runtime/interoperability/src/: authorization.rs  builder.rs  error.rs  lib.rs  service.rs
crates/runtime/miniapp-runtime/: CHANGELOG.md  Cargo.toml  MAN.md  README.md
crates/runtime/miniapp-runtime/src/: lib.rs
crates/runtime/miniapp-runtime/tests/: runtime_tests.rs
crates/spec-conformance/: Cargo.toml
crates/spec-conformance/src/: lib.rs
crates/spec-conformance/tests/: contract_conformance.rs  proptest_conformance.proptest-regressions  proptest_conformance.rs
crates/spec-conformance/tests/support/: mod.rs
(+638 files in other folders)
