[package]
name = "domain-mef"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Domínio MEF — Matriz de Estrutura Funcional (classificação documental)"

[dependencies]
chrono   = { workspace = true }
serde    = { workspace = true }
thiserror = { workspace = true }
[lints]
workspace = true
