[package]
name        = "domain-telemetry"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
authors.workspace   = true
description = "Domínio telemetria — eventos de uso de apps e estatísticas de utilização"

[dependencies]
chrono    = { workspace = true }
serde     = { workspace = true }
thiserror = { workspace = true }
