[package]
name = "core-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core de configuração local do Mini-Kernel RS"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
support-errors = { path = "../../support/support-errors" }
[lints]
workspace = true
