[package]
name = "core-documental"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Domínio de custódia documental institucional (document-centric)"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true

core-rh  = { path = "../core-rh" }
core-org = { path = "../core-org" }
