[package]
name = "core-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Ingestão auditável de dados externos — binários (PDF, imagens) e XML estruturado (SAF-T, CIUS-PT, iAP)"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
base64.workspace = true

core-audit      = { path = "../core-audit" }
core-validation = { path = "../core-validation" }
support-errors  = { path = "../../support/support-errors" }

[features]
test-helpers = []

[dev-dependencies]
core-ingest = { path = ".", features = ["test-helpers"] }
[lints]
workspace = true
