[package]
name = "core-org"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Modelo de domínio da estrutura orgânica institucional (positions, competencies, delegations)"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
uuid.workspace = true

support-errors = { path = "../../support/support-errors" }
[lints]
workspace = true
