[package]
name = "core-rh"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core de identidade funcional/local do Mini-Kernel RS"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true

support-errors = { path = "../../support/support-errors" }
core-validation = { path = "../core-validation" }
core-audit = { path = "../core-audit" }
