[package]
name = "core-validation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core de validação estrutural do Mini-Kernel RS"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
support-errors = { path = "../../support/support-errors" }
support-normalization = { path = "../../support/support-normalization" }

[dev-dependencies]
tempfile.workspace = true
[lints]
workspace = true
