[package]
name        = "adapter-registry-sqlite"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
authors.workspace   = true
description = "Adapter SQLite para o catálogo institucional de apps (domain-registry)"

[dependencies]
domain-registry = { path = "../../../domain/domain-registry" }
adapter-sqlite  = { path = "../adapter-sqlite" }
support-errors  = { path = "../../support/support-errors" }
rusqlite        = { workspace = true }
serde_json      = { workspace = true }
chrono          = { workspace = true }
thiserror       = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
core-rh  = { path = "../../../kernel/core/core-rh" }
