[package]
name        = "adapter-telemetry-sqlite"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
authors.workspace   = true
description = "Adapter SQLite para telemetria de uso de apps (domain-telemetry)"

[dependencies]
domain-telemetry = { path = "../../../domain/domain-telemetry" }
adapter-sqlite   = { path = "../adapter-sqlite" }
support-errors   = { path = "../../support/support-errors" }
rusqlite         = { workspace = true }
serde_json       = { workspace = true }
chrono           = { workspace = true }
thiserror        = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
