[package]
name = "address-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Adapter SQLite para lookup de moradas por codigo postal"

[dependencies]
rusqlite.workspace = true
thiserror.workspace = true
adapter-sqlite = { path = "../adapter-sqlite" }
support-address = { path = "../../support/support-address" }
support-errors = { path = "../../support/support-errors" }

[dev-dependencies]
tempfile.workspace = true
[lints]
workspace = true
