[package]
name = "support-app-bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
serde_json.workspace = true
adapter-sqlite = { path = "../adapter-sqlite" }
core-config = { path = "../../core/core-config" }
files = { path = "../files" }
documental-sqlite = { path = "../documental-sqlite" }
rh-sqlite = { path = "../rh-sqlite" }
support-versioning = { path = "../../support/support-versioning" }

[dev-dependencies]
tempfile.workspace = true
[lints]
workspace = true
