[package]
name = "email-infra"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Adaptadores infra para verificacao DNS/MX de email"

[dependencies]
core-validation = { path = "../../core/core-validation" }
serde_json.workspace = true
support-normalization = { path = "../../support/support-normalization" }
ureq.workspace = true

[dev-dependencies]
tempfile.workspace = true
