[package]
name = "files"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Biblioteca headless para gestão de diretórios e nomes técnicos"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
core-config = { path = "../../core/core-config" }
