[package]
name = "files"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Biblioteca headless para gestão de diretórios e nomes técnicos"

[dependencies]
thiserror = { workspace = true }
core-config = { path = "../../core/core-config" }
[lints]
workspace = true
